--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -127,7 +127,7 @@
                         <h3 class="ttl-terianry centered-text">{{ item.content | safe }}</h3>
                         <ul class="price-list">
                           {% for detail in item.detail %}
-                            <li>
+                            <li style="margin-bottom: 0;">
                               <dd>{{ detail }}</dd>
                             </li>
                           {% endfor %}
