--- a/app/assets/scss/4-pages/_payment_com.scss
+++ b/app/assets/scss/4-pages/_payment_com.scss
@@ -28,6 +28,9 @@
       .font-weight-normal {
         font-weight: normal;
       }
+      @media #{$sp} {
+        margin-bottom: 30px;
+      }
     }
     .yellow-underline {
       background: linear-gradient(180deg, rgba(0, 0, 0, 0) 70%, #ffff01 0);
@@ -197,6 +200,8 @@
 
           @media #{$sp} {
             max-width: unset;
+            padding: 0;
+            // margin: 14px 0;
           }
 
           &-tooltip {
@@ -381,6 +386,7 @@
         margin-bottom: 100px;
         @media #{$sp} {
           font-size: 20px;
+          margin-bottom: 130px;
         }
       }
       .act-more {
@@ -414,7 +420,9 @@
             justify-content: center;
 
             @media #{$sp} {
+              font-size: 16px;
               white-space: pre;
+              top: -35px;
             }
 
             &::before {
@@ -460,9 +468,27 @@
           }
           .act-more-content-btn {
             height: auto;
+            @media #{$sp} {
+              width: 100%;
+              a {
+                font-size: 14px;
+                padding: 13px 35px;
+              }
+            }
+          }
+
+          @media #{$sp} {
+            flex-direction: column;
           }
         }
+
+        @media #{$sp} {
+          padding: 0;
+        }
       }
+    }
+    @media #{$sp} {
+      padding: 50px 15px;
     }
   }
 
@@ -610,6 +636,9 @@
   .section-reason-chosing {
     background: #f5f5f5;
     padding: 70px 0;
+    @media #{$sp} {
+      padding: 50px 15px;
+    }
   }
 
   .section-voice {
@@ -631,6 +660,9 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
+      @media #{$sp} {
+        margin-bottom: 25px;
+      }
     }
   }
 
@@ -652,6 +684,10 @@
         text-decoration: underline;
         color: $primary-color;
       }
+
+      @media #{$sp} {
+        font-size: 16px;
+      }
     }
 
     &__list {
@@ -668,6 +704,10 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
+
+      @media #{$sp} {
+        margin-bottom: 25px;
+      }
     }
 
     .question-tab,
@@ -736,6 +776,11 @@
         .ttl-tertiary {
           font-weight: bold;
         }
+      }
+
+      @media #{$sp} {
+        margin-top: 30px;
+        margin-bottom: 15px;
       }
     }
 
