フッター修正

--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -131,8 +131,10 @@
           </a>
         </li>
 
-        <li>プライバシーポリシー
+        <li>
+        <a href="https://www.saisoncard.co.jp/info/privacy-policy/" target="_blank">プライバシーポリシー
           {% include 'component/icons/external.njk' %}
+          </a>
         </li>
 
         <li>
@@ -149,7 +151,6 @@
           </a>
         </li>
 
-        <li>サイトマップ</li>
       </ul>
     </div>
     <div class="copy-right">
