--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -480,7 +480,7 @@
         </div>
       </div>
     </div>
-    <a href="#" class="bondi_blue_outline_btn">
+    <a href="/seminar_list/" class="bondi_blue_outline_btn">
       <span class="bondi_blue_outline_btn__tittle">
         セミナー・イベント情報一覧を見る
       </span>
