フォーム修正

--- a/app/pages/catalog_detail/index.njk
+++ b/app/pages/catalog_detail/index.njk
@@ -85,7 +85,7 @@
                 <ul class="select_ul">
                   <li>
                     <div class="option">
-                      <p>商品の機能について</p>
+                      <p>東京都</p>
                     </div>
                   </li>
                 </ul>
@@ -144,13 +144,18 @@
               <div class="select_wrap">
                 <ul class="default_option">
                   <li>
-                    <div class="option">
+                    <div class="option disabled"">
                       <p>導入を検討しているため</p>
                     </div>
                   </li>
                 </ul>
 
                 <ul class="select_ul">
+                  <li>
+                    <div class="option">
+                      <p>導入を検討しているため</p>
+                    </div>
+                  </li>
                   <li>
                     <div class="option">
                       <p>他社との比較のため</p>
@@ -184,7 +189,7 @@
             </label>
           </div>
 
-          <a href="#" class="term-agreement">
+          <a href="https://www.saisoncard.co.jp/info/legal/" class="term-agreement" target="_blank">
             <p>「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p>
           </a>
 
