--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -3,7 +3,7 @@
 $sp: "all and (max-width : 768px)";
 //$sm: "all and (max-width : 840px)";
 //$md: "all and (max-width : 1000px)";
-//$lg: "all and (max-width : 1100px)";
+$lg: "all and (max-width : 1100px)";
 $tab: "all and (max-width : 860px)";
 //$xl: "all and (max-width : 1200px)";
 $pc: "all and (min-width: 769px)";
@@ -17,6 +17,8 @@ $font-family: "Noto Sans JP", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic
 $primary-color: #0297b5;
 $black_color: #191919;
 $black-color-01: #121212;
+
+$purple-color: #004098;
 
 $secondary-color: #ccc;
 
