fix width side bar

--- a/app/assets/scss/4-pages/_payment_com.scss
+++ b/app/assets/scss/4-pages/_payment_com.scss
@@ -1,10 +1,13 @@
-.rbt-list {
-  .rbt-item {
-    &.active {
-      background: $orange-gradient;
+.payment_com {
+  .rbt-list {
+    .rbt-item {
+      &.active {
+        background: $orange-gradient;
+      }
     }
   }
 }
+
 .payment_com-page {
   section {
     .ttl-notice {
