--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -55,7 +55,9 @@ link: "#material"
 
 {# Main content #}
 {% block content %}
-{% include 'partial/sidebar.njk' %}
+<div class="payment_com">
+  {% include 'partial/sidebar.njk' %}
+</div>
 <main class="payment_com-page">
   <section id="top" class="section-welcome fadein">
     <div class="section-welcome__banner">
