--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -66,7 +66,7 @@ link: "#material"
 
     <div class="section-welcome-container">
       <div class="section-welcome-info">
-        <div class="section-welcome-left">
+        <div class="section-welcome-info-left">
           <div class="title-notice">
             <div class="title-content">
               <span class="yellow-txt">中小企業様</span>のための、
@@ -92,7 +92,7 @@ link: "#material"
           </div>
         </div>
 
-        <div class="section-welcome-right pc-only">
+        <div class="section-welcome-info-right pc-only">
           <ul class="info-list">
             <li><span class="special">最短1日後</span>の振り込みに対応！※1</li>
             <li><span class="special">一律4%</span>のお得な手数料</li>
