--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -1,14 +1,4 @@
-.payment_com {
-  .rbt-list {
-    .rbt-item {
-      &.active {
-        background: $orange-gradient;
-      }
-    }
-  }
-}
-
-.payment_com-page {
+.saison-invoice-page {
   section {
     .ttl-notice {
       font-size: 14px;
@@ -36,7 +26,11 @@
       }
     }
     .yellow-underline {
-      background: linear-gradient(180deg, rgba(0, 0, 0, 0) 70%, #ffff01 0);
+      background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0) 70%,
+        $yellow-color 0
+      );
     }
     .primary-txt {
       color: $primary-color;
@@ -46,13 +40,42 @@
   .section-welcome {
     padding-top: 70px;
     padding-bottom: 40px;
-    min-height: 558px;
-
     @media #{$sp} {
       padding: 70px 0;
     }
     text-align: center;
     position: relative;
+
+    .slick-slider {
+      .slick-list {
+        height: 100%;
+
+        .slick-track {
+          height: 100%;
+
+          img {
+            height: 100%;
+          }
+        }
+      }
+    }
+
+    &__inner {
+      display: inline-block;
+      background: #029742;
+      transform: skewX(-15deg);
+      padding: 0px 20px;
+
+      @media #{$sp} {
+        padding: 0px 10px;
+      }
+
+      .ttl-tertiary {
+        transform: skewX(15deg);
+        color: #ffffff;
+        margin-bottom: 0;
+      }
+    }
 
     &__banner {
       position: absolute;
@@ -64,6 +87,10 @@
       border-radius: inherit;
       overflow: hidden;
       background: $primary-color;
+
+      @media #{$sp} {
+        height: auto;
+      }
 
       img {
         position: static;
@@ -81,12 +108,11 @@
       margin: auto;
 
       @media #{$sp} {
-        padding: 0;
         display: block;
       }
 
       &-left {
-        width: 60%;
+        width: 50%;
         text-align: left;
         @media #{$sp} {
           width: 100%;
@@ -99,208 +125,124 @@
         @media #{$sp} {
           width: 100%;
         }
-      }
-    }
 
-    .slick-slider {
-      .slick-list {
-        height: 100%;
+        .section-welcome-right__img {
+          position: relative;
+          height: 476px;
+          width: 712px;
 
-        .slick-track {
-          height: 100%;
+          @media #{$sp} {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+          }
 
           img {
+            position: absolute;
+            width: 100%;
             height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+          }
+
+          .info-list {
+            position: absolute;
+            bottom: 64px;
+            right: 42px;
+
+            .info-item {
+              color: $white-color;
+              font-size: 16px;
+              font-weight: 700;
+              background-color: $primary-color;
+              padding: 10px 20px;
+              border-radius: 3px;
+              margin-bottom: 10px;
+              .special {
+                font-size: 24px;
+              }
+            }
           }
         }
       }
     }
 
-    .section-welcome-info {
-      display: flex;
-      justify-content: center;
-      @media #{$sp} {
-        flex-direction: column;
-        top: 0;
-        left: 0;
-        transform: none;
-        width: 100%;
-        padding-top: 30px;
-      }
-    }
-    .section-welcome-info-left {
-      @media #{$sp} {
-        text-align: center;
-      }
+    &__title {
+      margin: 20px 0;
+      color: #ffffff;
 
-      .title-notice {
-        position: relative;
-        display: inline-block;
-        font-size: 21px;
-        font-weight: 700;
-        padding: 6px 20px;
-
-        color: $white-color;
-        background-color: $blue-color-3;
-        transform: skew(-10deg);
-        margin-bottom: 15px;
-        .title-content {
-          line-height: 28px;
-          transform: skew(10deg);
-          font-size: 21px;
-          .yellow-txt {
-            color: $yellow-color;
-          }
-        }
-      }
       .ttl-primary {
-        color: $white-color;
-        font-size: 42px;
-        text-align: left;
-        margin-bottom: 20px;
-        text-shadow: 0px 0px 20px #05172c8d;
-        @media #{$sp} {
-          font-size: 24px;
-        }
-      }
-      .ttl-tertiary {
-        color: $white-color;
-        margin-bottom: 105px;
+        margin-bottom: 0;
         text-align: left;
 
         @media #{$sp} {
           text-align: center;
         }
+      }
+    }
 
-        .special {
-          font-size: 28px;
-          text-shadow: 0px 0px 20px #05172c8d;
+    &__desc {
+      margin-bottom: 123px;
+      .ttl-quaternary {
+        text-align: left;
+        font-size: 24px;
+        color: #fff;
+        @media #{$sp} {
+          text-align: center;
+
+          font-size: 20px;
         }
       }
-      .btn-action {
-        display: inline-flex;
-        gap: 20px;
-        .act-more {
-          margin: auto;
-          position: relative;
-          padding: 14px 64px 14px 48px;
-          white-space: nowrap;
+    }
 
-          @media #{$sp} {
-            max-width: unset;
-            // padding: 0;
-            // margin: 14px 0;
-          }
-
-          &-tooltip {
-            position: absolute;
-            width: 100%;
-            top: -65px;
-            white-space: nowrap;
-            left: 50%;
-            transform: translateX(-50%);
-
-            @media #{$sp} {
-              width: auto;
-            }
-
-            &__content {
-              position: relative;
-              // width: fit-content;
-              font-size: 14px;
-              font-weight: 600;
-              margin-bottom: 25px;
-              background-color: #fff;
-              border-radius: 3px;
-              color: $orange-color;
-              padding: 10px 20px;
-
-              display: flex;
-              align-items: center;
-              justify-content: center;
-
-              &::before {
-                position: absolute;
-                content: "\A";
-                top: calc(100% - 1px);
-                left: calc(50% - 15px);
-                width: 0;
-                height: 0;
-                border-left: 15px solid transparent;
-                border-right: 15px solid transparent;
-                border-top: 10px solid #fff;
-              }
-            }
-          }
-        }
+    &__act {
+      .act-more {
+        margin-left: 0;
+        position: relative;
 
         @media #{$sp} {
-          flex-direction: column;
-          gap: 100px;
+          margin: auto;
         }
-      }
-    }
-    .section-welcome-info-right {
-      position: relative;
-      width: 640px;
-      height: 402px;
-      background-image: url("/assets/img/common/payment_com_banner.png");
-      background-size: contain;
-      background-repeat: no-repeat;
-      ul {
-        position: absolute;
-        bottom: -27px;
-        right: 0;
-        li {
-          color: $white-color;
-          font-size: 16px;
-          font-weight: 700;
-          background-color: $green-color-2;
-          padding: 10px 20px;
-          border-radius: 3px;
-          margin-bottom: 10px;
-          .special {
-            font-size: 24px;
+
+        &-tooltip {
+          position: absolute;
+          top: -68px;
+          left: calc(50% - 128.5px);
+          width: auto;
+          height: auto;
+
+          &__content {
+            position: relative;
+            width: fit-content;
+            font-size: 14px;
+            font-weight: 600;
+            margin-bottom: 25px;
+            background-color: #fff;
+            border-radius: 3px;
+            color: $orange-color;
+            padding: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &::before {
+              position: absolute;
+              content: "\A";
+              top: calc(100% - 1px);
+              left: calc(50% - 15px);
+              width: 0;
+              height: 0;
+              border-left: 15px solid transparent;
+              border-right: 15px solid transparent;
+              border-top: 10px solid #fff;
+            }
           }
         }
       }
-      @media #{$sp} {
-        width: 100%;
-      }
-    }
-
-    .section-welcome-right-sp {
-      .info-list {
-        color: $white-color;
-        text-align: left;
-        margin: auto;
-        width: 85%;
-        font-size: 20px;
-        font-weight: 700;
-        display: grid;
-        gap: 20px;
-      }
-      .info-note-sp {
-        display: grid;
-        gap: 10px;
-        width: 85%;
-        margin: 20px auto 0 auto;
-        text-align: left;
-      }
-    }
-    .info-note {
-      position: absolute;
-      bottom: -65px;
-      right: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      font-size: 13px;
-      color: $gray-color-8;
-      line-height: 22px;
-    }
-    @media #{$sp} {
-      height: auto;
     }
   }
 
