--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -1,320 +1,96 @@
 .platinum_business-page {
   .section-welcome {
-    padding: 133px 0 133px 0;
-    @media #{$sp} {
-      padding: 70px 0;
-    }
-    position: relative;
+    background-image: url("/assets/img/common/banner_10.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 668px;
 
-    &__banner {
-      position: absolute;
-      z-index: -1;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border-radius: inherit;
-      overflow: hidden;
-      background: $primary-color;
-
-      img {
-        position: static;
-        transform: none;
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-      }
-    }
-
-    .card {
-      width: 214px;
-      @media #{$sp} {
-        width: 150px;
-      }
-    }
-
-    .card-content {
+    .banner-containers {
       display: flex;
-      gap: 30px;
-      align-items: flex-end;
-
-      .ttl-quaternary {
-        font-size: 32px;
-        margin-bottom: 0 !important;
-        @media #{$sp} {
-          font-size: 20px;
-          &::after {
-            content: "";
-            width: 100%;
-            height: 7px;
-            display: block;
-            background-color: yellow;
-            margin-top: -7px;
-          }
-        }
-        &::after {
-          content: "";
-          width: 100%;
-          height: 20px;
-          display: block;
-          background-color: yellow;
-          margin-top: -20px;
-        }
-      }
-    }
-
-    .btn-containers {
-      width: fit-content;
-      margin-top: 40px;
-      a {
-        width: 384px;
-        @media #{$sp} {
-          width: 300px;
-        }
-      }
-    }
-
-    &-info {
-      display: flex;
-      align-items: center;
-      max-width: 1400px;
-      margin: auto;
-
-      @media #{$sp} {
-        padding: 0;
-        display: block;
-      }
-
-      &-left {
-        width: 60%;
-        text-align: left;
-        @media #{$sp} {
-          width: 100%;
-          text-align: center;
-        }
-      }
-
-      &-right {
-        width: 50%;
-        @media #{$sp} {
-          width: 100%;
-        }
-
-        .section-welcome-right__img {
+      justify-content: space-between;
+      .banner-left {
+        .title-notice {
           position: relative;
-          height: 413px;
-          width: 618px;
-
-          @media #{$sp} {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-          }
-
-          img {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            object-fit: cover;
-          }
-        }
-      }
-    }
-
-    .slick-slider {
-      .slick-list {
-        height: 100%;
-
-        .slick-track {
-          height: 100%;
-
-          img {
-            height: 100%;
-          }
-        }
-      }
-    }
-
-    .section-welcome-info {
-      display: flex;
-      justify-content: center;
-      gap: 300px;
-      @media #{$sp} {
-        flex-direction: column;
-        top: 0;
-        left: 0;
-        transform: none;
-        width: 100%;
-        padding-top: 30px;
-      }
-    }
-    .section-welcome-left {
-      @media #{$sp} {
-        text-align: center;
-      }
-
-      .title-notice {
-        position: relative;
-        display: inline-block;
-        font-size: 21px;
-        font-weight: 700;
-        padding: 6px 20px;
-
-        color: $white-color;
-        background-color: $blue-color-3;
-        transform: skew(-10deg);
-        margin-bottom: 15px;
-        .title-content {
-          line-height: 28px;
-          transform: skew(10deg);
+          display: inline-block;
           font-size: 21px;
-          .yellow-txt {
-            color: $yellow-color;
-          }
-        }
-      }
-      .ttl-primary {
-        color: $white-color;
-        font-size: 42px;
-        text-align: left;
-        margin-bottom: 20px;
-        text-shadow: 0px 0px 20px #05172c8d;
-        @media #{$sp} {
-          font-size: 24px;
-        }
-      }
-      .ttl-tertiary {
-        color: $white-color;
-        margin-bottom: 105px;
-        .special {
-          font-size: 28px;
-          text-shadow: 0px 0px 20px #05172c8d;
-        }
-      }
-      .btn-action {
-        display: inline-flex;
-        gap: 20px;
-        .act-more {
-          margin: auto;
-          position: relative;
-          padding: 14px 64px 14px 48px;
-          white-space: nowrap;
+          font-weight: 700;
+          padding: 6px 20px;
 
-          @media #{$sp} {
-            max-width: unset;
-            padding: 0;
-            // margin: 14px 0;
-          }
-
-          &-tooltip {
-            position: absolute;
-            width: auto;
-            top: -65px;
-            width: auto;
-            white-space: nowrap;
-            left: 50%;
-            transform: translateX(-50%);
-
-            &__content {
-              position: relative;
-              width: fit-content;
-              font-size: 14px;
-              font-weight: 600;
-              margin-bottom: 25px;
-              background-color: #fff;
-              border-radius: 3px;
-              color: $orange-color;
-              padding: 10px 20px;
-
-              display: flex;
-              align-items: center;
-              justify-content: center;
-
-              &::before {
-                position: absolute;
-                content: "\A";
-                top: 100%;
-                left: calc(50% - 15px);
-                width: 0;
-                height: 0;
-                border-left: 15px solid transparent;
-                border-right: 15px solid transparent;
-                border-top: 10px solid #fff;
-              }
+          color: $white-color;
+          background-color: $blue-color-3;
+          transform: skew(-10deg);
+          margin-bottom: 15px;
+          .title-content {
+            line-height: 28px;
+            transform: skew(10deg);
+            font-size: 21px;
+            .yellow-txt {
+              color: $yellow-color;
             }
           }
         }
-
-        @media #{$sp} {
-          flex-direction: column;
-          gap: 100px;
+        .ttl-primary {
+          font-size: 42px;
+          color: #ffffff;
+          text-align: start;
         }
-      }
-    }
-    .section-welcome-right {
-      position: relative;
-      width: 300px;
-      font-size: 24px;
-      color: #ffffff;
-      ul {
-        position: absolute;
-        bottom: -27px;
-        right: 0;
-        li {
-          color: $white-color;
-          font-size: 16px;
-          font-weight: 700;
-          background-color: $green-color-2;
-          padding: 10px 20px;
-          border-radius: 3px;
-          margin-bottom: 10px;
-          .special {
-            font-size: 24px;
+
+        .card-img {
+          width: 214px;
+          .credit-card-img {
+            max-width: 100%;
+            object-fit: cover;
+          }
+        }
+        .card-contents {
+          display: flex;
+          gap: 20px;
+          align-items: flex-end;
+        }
+        .card-description {
+          font-size: 32px;
+          font-weight: bold;
+          &::after {
+            content: "";
+            width: 100%;
+            height: 20px;
+            display: block;
+            background-color: $yellow-color;
+            margin-top: -20px;
+          }
+        }
+        .banner-btn {
+          margin-top: 40px;
+          a {
+            margin: unset;
           }
         }
       }
-      @media #{$sp} {
-        width: 100%;
+      .banner-right {
+        color: #fff;
+        font-size: 29px;
+        margin-left: -30px;
       }
     }
 
-    .section-welcome-right-sp {
-      .info-list {
-        color: $white-color;
-        text-align: left;
-        margin: auto;
-        width: 85%;
-        font-size: 20px;
-        font-weight: 700;
-        display: grid;
-        gap: 20px;
-      }
-      .info-note-sp {
-        display: grid;
-        gap: 10px;
-        width: 85%;
-        margin: 20px auto 0 auto;
-        text-align: left;
-      }
-    }
-    .info-note {
-      position: absolute;
-      bottom: -65px;
-      right: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      font-size: 13px;
-      color: $gray-color-8;
-      line-height: 22px;
-    }
     @media #{$sp} {
-      height: auto;
+      height: 750px;
+      .ttl-primary {
+        font-size: 28px !important;
+      }
+      .card-img {
+        width: 180px !important;
+      }
+
+      .card-description {
+        font-size: 18px !important;
+        background-color: $yellow-color;
+        transform: skew(-10deg);
+        padding: 2.5px;
+        &::after {
+          display: none;
+        }
+      }
     }
   }
 
@@ -772,7 +548,10 @@
       display: grid;
       grid-template-columns: 120px 1fr 1fr;
       grid-template-rows: repeat(7, auto);
-      min-width: 1140px;
+      width: 1140px;
+      @media #{$sp} {
+        width: 800px;
+      }
       .credit-card-img {
         max-width: 210px;
       }
@@ -806,9 +585,17 @@
         &.height-160 {
           height: 160px;
         }
-        .content-btn {
+        &.height-70 {
+          height: 70px;
+        }
+        .bondi_blue_outline_btn {
+          margin: 0;
           margin-top: 30px;
           max-width: 60%;
+          padding: 10px;
+          .bondi_blue_outline_btn__tittle {
+            margin: 0px;
+          }
         }
         ul {
           li {
@@ -829,6 +616,14 @@
       width: 100%;
       align-items: center;
       flex-wrap: wrap;
+      @media #{$sp} {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+        * {
+          margin: auto;
+        }
+      }
     }
     .step {
       text-align: center;
@@ -843,6 +638,9 @@
     @media #{$sp} {
       .step {
         height: 200px;
+      }
+      .arrowStep {
+        transform: rotate(90deg);
       }
       .btn-container {
         display: flex;
