--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -280,7 +280,7 @@
       </div>
 
       <div class="table-card">
-        <div class="table-card-head card-type-2">中小規模ビジネスオーナー様、個人事業主様向け（個人与信型ビジネスカード）z</div>
+        <div class="table-card-head card-type-2">中小規模ビジネスオーナー様、個人事業主様向け（個人与信型ビジネスカード）</div>
         <div class="grid-card-container">
           <div>
             <div class="title-row">
@@ -401,13 +401,13 @@
             <div class="title-row">詳細</div>
 
             <div class="card-row">
-              <div class="card-btn card-type-1">
+              <div class="card-btn card-type-2">
                 <a href="#" class="">詳細</a>
               </div>
             </div>
 
             <div class="card-row">
-              <div class="card-btn card-type-1">
+              <div class="card-btn card-type-2">
                 <a href="#" class="">詳細</a>
               </div>
             </div>
@@ -621,9 +621,8 @@
 
       <div class="btn-container">
 
-        <a href="#" class="bondi_blue_btn">
-          <span>選択したカードを比較する</span>
-          {% include 'component/icons/arrow-right.njk' %}
+        <a class="bondi_blue_outline_btn">
+          <span class="bondi_blue_outline_btn__tittle">選択したカードを比較する</span>
         </a>
       </div>
 
