change card to a

--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -688,7 +688,7 @@
         <div class="col-left col">
           <div class="card-header left">個人事業主・中小企業経営者様の場合</div>
           <div class="card-list">
-            <div class="card">
+            <a class="card">
               <div class="img-container">
                 <img src="/assets/img/common/card-img-1.png" alt="work image" class="card-img">
               </div>
@@ -699,8 +699,8 @@
                 <div class="content-subhead">マイルが効率的に貯まる!</div>
                 <div class="content-mainhead">最大還元率 1.125%</div>
               </div>
-            </div>
-            <div class="card">
+            </>
+            <a class="card">
               <div class="img-container">
                 <img src="/assets/img/common/card-img-2.png" alt="work image" class="card-img">
               </div>
@@ -711,8 +711,8 @@
                 <div class="content-subhead">有効期限のない</div>
                 <div class="content-mainhead">永久不滅ポイントが付与</div>
               </div>
-            </div>
-            <div class="card">
+            </a>
+            <a class="card">
               <div class="img-container">
                 <img src="/assets/img/common/card-img-3.png" alt="work image" class="card-img">
               </div>
@@ -723,7 +723,7 @@
                 <div class="content-subhead">収入証明書・登記簿謄本などが不要</div>
                 <div class="content-mainhead">起業直後でもお申し込み可能</div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
         <div class="col-right col">
