--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -49,6 +49,7 @@ $blue-color-4: #014A58;
 $green-color: #007477;
 $green-color-1: #53d2b2;
 $green-color-2: #24A4A4;
+$green-color-3: #58B79D;
 
 $gray-color: #f1f1f1;
 $gray-color-2: #a7a7a7;
@@ -60,6 +61,7 @@ $gray-color-7: #eeeeee;
 $gray-color-8: #797979;
 
 $yellow-color: #ffff01;
+$yellow-color-1: #EDF8E5;
 
 // テキストカラー
 
