--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -100,7 +100,7 @@
           <img src="/assets/img/common/payment-section-card-1.png" alt="cast flow">
           <div class="content">
             <div class="title">
-              <span class="blue">法人与信型ビジネスカード</span>
+              <span class="blue">スカード</span>
               セゾンプラチナ・ビジネス プロアメリカン・エキスプレス®・カード
             </div>
             <div class="description">
